Fixed the vertical alignment problems for the pagination controls (and falling off the side of the page)

--- a/modules/enterprise/gui/portal-war/src/main/webapp/css/win.css
+++ b/modules/enterprise/gui/portal-war/src/main/webapp/css/win.css
@@ -2102,6 +2102,7 @@ ul.radio-group .unspecified {
 .on-pager-button {
    float: left;
    margin-left: 10px;
+   margin-top: 4px;
    margin-bottom: 4px;
 }
 
